--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run bulid",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "start": "react-scripts start",
     "build": "react-scripts build",
